--- a/src/transport/Cargo.toml
+++ b/src/transport/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "aqevia-transport"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 aqevia-router = { path = "../router" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
