chore: update version to 0.0.1 and enhance documentation across multiple files for clarity and structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: "3.8"
 services:
   aqevia-engine:
+  # Image tag tracks the Backlit semantic version (vMAJOR.MINOR.REV) to keep deployments aligned with releases.
+    image: aqevia:v0.0.1
     build:
       context: .
     container_name: aqevia-engine
