--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,13 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
+max_line_length = 120
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.sh]
+indent_size = 2
 
 [*.{js,ts,json,yaml,yml}]
 indent_size = 2
