--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
   aqevia-engine:
-  # Image tag tracks the Backlit semantic version (vMAJOR.MINOR.REV) to keep deployments aligned with releases.
-    image: aqevia:v0.0.1
+    image: aqevia-engine:${AQEVIA_VERSION}
     build:
       context: .
+      args:
+        AQEVIA_VERSION: ${AQEVIA_VERSION}
     container_name: aqevia-engine
     restart: unless-stopped
     ports:
